Use finalized Forge parent JVM args for integration runs